26_Moriond_UNIONS/custom.scss
/*-- scss:defaults --*/



// font settings
@import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,300..700;1,300..700&display=swap');
$font-family-sans-serif: Raleway, sans-serif;
body {
    font-variant-numeric: lining-nums;
    -moz-font-feature-settings: "lnum" 1; 
    -moz-font-feature-settings: "lnum=1"; 
    -ms-font-feature-settings: "lnum" 1; 
    -o-font-feature-settings: "lnum" 1; 
    -webkit-font-feature-settings: "lnum" 1; 
    font-feature-settings: "lnum" 1;
}


$presentation-font-size-root: 45px;
$presentation-h1-font-size: 2.5em;
$presentation-h2-font-size: 1.35em;
$presentation-h3-font-size: 1.5em;
$presentation-h4-font-size: 1.3em;


/*-- scss:rules --*/

.reveal h1, .reveal h2, .reveal h3, .reveal h4 {
    font-weight: 600 !important;
    font-synthesis: none;
}

// /* Custom CSS for aligning figure captions */
.caption-left {
    text-align: left;
    margin-left: 30px;        /* Remove default margins */
}

.fitcenter {
    display: flex; 
    justify-content: center; 
    align-items: center;
    text-align:center;

    &.text-left {
        text-align: left;
        figcaption {
            margin-left: 30px;        /* Remove default margins */
        }
    }
    
    &.text-right {
        text-align: right;
        figcaption {
            margin-right: 30px;        /* Remove default margins */
        }
    }
}

.reveal img {
    vertical-align: middle;
    // max-width: 100%;
    // padding: 10px 10px;
    margin: 0
}

.quarto-figure {
    margin-bottom: 0;
    padding: 0;
}

.reveal .footer {
    font-size: 2.7vh !important;
    bottom: 0.45vh !important;
    line-height: 1 !important;
    opacity: 0.9;
}

// .reveal .slide-logo {
// //   height: 0.7em !important;
//   height: 5.5vh !important;
//   bottom: 0.5vh !important;
// //   width: 100px !important;
//   max-width: unset !important;
//   max-height: unset !important;
// }

.cea-logo {
    position: absolute;
    bottom: -125px;
    left: -110px;
    width: 92px;
    z-index: 2;
}

.cosmostat-logo {
    position: absolute;
    bottom: -146px;
    left: -17px;
    width: 300px;
    z-index: 1;
}

.moriond-logo {
    position: absolute;
    bottom: -85px;
    right: -115px;
    width: 220px;
    z-index: 2;
}

.quarto-title-block .quarto-title-authors {
    margin-top: 0.3em;
}

.quarto-title-block .occasion {
    margin-top: 0.8em;
}

.quarto-title-block .date {
    margin-top: 0.3em;
}

.reveal .team-photo-slide h2 {
    display: none;
}

.reveal .team-photo-slide {
    padding-top: 0 !important;
}


.reveal img.nopad {
    padding: 0;
}

figcaption > span {
    display: block !important;
    position: relative !important;
}

.credit {
    // font-size: 0.7em;
    position: relative;
    display: block;
    // text-align: center;
}

.reveal .slide-number > a[href*='title-slide'] {
  display: none;
}

.reveal .slides .full {
    top: 0 !important;
    padding: 0 0;
    margin-top: 0px;
}

.pte-table-container {
    position: relative;

    .quarto-figure {
        position: relative;
    }

    .quarto-figure::after {
        content: "";
        position: absolute;
        // Size cuts / Fiducial row highlight
        top: 43%;
        left: 12%;
        width: 76%;
        height: 7.5%;
        border: 3px solid rgba(0, 128, 128, 0.85);
        background: rgba(0, 128, 128, 0.08);
        border-radius: 4px;
        pointer-events: none;
        z-index: 10;
    }
}


// .align-left p,
// .align-left ul,
// .align-left ol {
//     text-align: left;
// }

// .reveal blockquote {
//     width: 95%;
//     margin-bottom: 5px;
// }

// .reveal section {
//     height: 100%;
//     display: flex;
//     flex: 1;
//     align-items: center;
//     justify-content: center;
// }

// .reveal section.center {
//     height: unset;
// }

// .reveal .center h1 {
//     height: 2.5em;
// }

// .container {
//     height: 90%;
//     display: flex;
//     flex: 1;
//     overflow: auto;
//     align-items: center;
//     justify-content: center;
// }

